--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="description" content="Deteccion de enfermedades"/>
@@ -27,7 +27,7 @@
                     <span style="color: #0000ff;">|</span>
                     <li class="nav_txt News"><a href="#">Noticias</a></li>
                     <span style="color: #0000ff;">|</span>
-                    <li class="nav_txt Contacts"><a href="#">Contáctanos</a></li>
+                    <li class="nav_txt Contacts"><a href="contact_Page/index.html">Contáctanos</a></li>
                     <span style="color: #0000ff;">|</span>
                     <li class="nav_txt User"><a href="user_Login_Page/index.html"><i class="fa-regular fa-user"></i></a></li>
                 </ul>
@@ -55,6 +55,45 @@
         </section>
 
         <section class="banner" id="id">.</section>
+
+
+        <footer class="footer-ctn">
+            <div class="footer-ctn_hdr">
+                <ul class="ftr_hdr_terms">
+                    <li class="ftr_terms"><a href="#" class="link_terms">Términos de uso</a></li>
+                    <li class="ftr_terms"><a href="#" class="link_terms">Política de privacidad</a></li>
+                </ul>
+            </div>
+            <div class="info-ctn">
+                <h3 class="nameApp">SAI</h3>
+                <div class="app_lst-ctn">
+                    <ul class="app_lst">
+                        <li class="app fcb"><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+                        <li class="app wht"><a href="#"><i class="fa-brands fa-whatsapp"></i></a></li>
+                        <li class="app ytb"><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
+                    </ul>
+                </div>
+                <div class="ubi-ctn">
+                    <span class="spot">Jr. Independencia</span>
+                    <br>
+                    <br>
+                    <span class="spot">San Miguel</span>
+                    <br>
+                    <br>
+                    <span class="spot">Lima - Perú</span>
+                    <br>
+                    <br>
+                </div>
+                <div class="dnwl_app-ctn">
+                    <ul class="dnwl_app">
+                        <li><a href="#"><img src="imgpag/pngwing.com (3).png"></a></li>
+                        <li><a href="#"><img src="imgpag/pngwing.com (2).png"></a></li>
+                    </ul>
+                </div>
+                <br>
+                <span class="end_ftr">SAI © 2024</span>
+            </div>
+        </footer>
 
 
         <script type="text/javascript" src="main.js"></script>
