--- a/user_Login_Page/index.html
+++ b/user_Login_Page/index.html
@@ -27,7 +27,7 @@
                     <span style="color: #0000ff;">|</span>
                     <li class="nav_txt News"><a href="#">Noticias</a></li>
                     <span style="color: #0000ff;">|</span>
-                    <li class="nav_txt Contacts"><a href="#">Contáctanos</a></li>
+                    <li class="nav_txt Contacts"><a href="../contact_Page/index.html">Contáctanos</a></li>
                     <span style="color: #0000ff;">|</span>
                     <li class="nav_txt User"><a href="index.html"><i class="fa-regular fa-user"></i></a></li>
                 </ul>
@@ -45,11 +45,11 @@
                     <h2>LOGIN</h2>
                     <div class="input-ctn">
                         <div class="user-box">
-                            <input id="email" type="text" name="" required="">
+                            <input id="email" type="text" name="email" required="">
                             <label class="email" for="email">correo</label>
                         </div>
                         <div class="user-box">
-                            <input id="password" type="text" name="" required="">
+                            <input id="password" type="text" name="password" required="">
                             <label class="password" for="password">contraseña</label>
                         </div>
                     </div>
@@ -57,7 +57,7 @@
                         <a href="#">¿Olvidó su contraseña?</a>
                     </div>
                     <div class="btn_frm-ctn">
-                        <button onclick="infor()">
+                        <button type="submit" onclick="infor()">
                            <span class="btn_txt">Continuar</span> 
                         </button>
                     </div>
