--- a/contact_Page/index.html
+++ b/contact_Page/index.html
@@ -20,6 +20,9 @@
             </div>
 
             <nav class="nav_bar">
+                <div class="btns menuToggle">
+                    <i class="fa-solid fa-bars"></i>
+                </div>
                 <ul class="first-list">
                     <li class="nav_txt Menu"><a href="../index.html">Inicio</a></li>
                     <span style="color: #0000ff;">|</span>
@@ -58,16 +61,16 @@
                                     <img src="../imgpag/banner-medico-medico-gafas.jpg" alt="firstDeveloper">
                                 </div>
                                 <div class="ext_Detail">
-                                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur nobis repudiandae voluptas. Nesciunt ratione eaque totam error odio corporis obcaecati rerum rem tempore eum, ut consectetur enim at accusamus unde.</p>
+                                    <p>Mi nombre es Carlos Enrique Zegarra Jurado,  tengo 18 años. Soy una persona muy responsable con la cual puedes contar siempre, tengo conocimiento en C++, Python y un poco de HTML, soy aficionado del fútbol y también me gusta practicarlo, en mis tiempos libres también me distraigo jugando videojuegos.</p>
                                 </div>
                                 <div class="redes_Detail">
-                                    <span>> Email: gabriel...@gmail.com</span>
+                                    <span><span style="color:rgb(45, 68, 88)">o</span> Email: carlos...@gmail.com</span>
                                     <br>
                                     <br>
-                                    <span>> ID: u202JSDi7</span>
+                                    <span><span style="color:rgb(45, 68, 88)">o</span> ID: U202220861</span>
                                     <br>
                                     <br>
-                                    <span>> Carrera: Ingeniería de software</span>
+                                    <span><span style="color:rgb(45, 68, 88)">o</span> Carrera: Ingeniería de Sistemas</span>
                                     <br>
                                 </div>
                             </div>
@@ -75,50 +78,100 @@
                         <li>
                             <div class="sndCntct_info">
                                 <div class="img_ctn">
-                                    <img src="#" alt="secondDeveloper">
+                                    <img src="/imgpag/banner-medico-medico-gafas.jpg" alt="secondDeveloper">
                                 </div>
                                 <div class="ext_Detail">
-                                    <p>.</p>
+                                    <p>Mi nombre es Miguel Rolando Salas Guillén, tengo 18 años y actualmente curso el 4to ciclo, soy una persona responsable con los trabajos que se me asignan y trato de ser lo más colaborativo posible con los grupos que conformó. Voy a apoyar a mi grupo para poder desarrollar adecuadamente los trabajos futuros y conseguir la nota esperada por todos.</p>
+                                </div>
+                                <div class="redes_Detail">
+                                    <span><span style="color:rgb(45, 68, 88)">o</span> Email: miguel...@gmail.com</span>
+                                    <br>
+                                    <br>
+                                    <span><span style="color:rgb(45, 68, 88)">o</span> ID: U202221621</span>
+                                    <br>
+                                    <br>
+                                    <span><span style="color:rgb(45, 68, 88)">o</span> Carrera: Ingeniería de Sistemas</span>
+                                    <br>
                                 </div>
                             </div>
                         </li>
                         <li>
                             <div class="thrtCntct_info">
                                 <div class="img_ctn">
-                                    <img src="#" alt="thrithDeveloper">
+                                    <img src="/imgpag/banner-medico-medico-gafas.jpg" alt="thrithDeveloper">
                                 </div>
                                 <div class="ext_Detail">
-                                    <p>.</p>
+                                    <p>Mi nombre es Mateo Rentería, tengo 20 años. Soy una persona muy paciente, trato de colaborar y llevarme bien con mis compañeros. Me considero un buen apoyo en caso de que algún compañero necesite ayuda o alguna aclaración sobre nuestros trabajos.</p>
+                                </div>
+                                <div class="redes_Detail">
+                                    <span><span style="color:rgb(45, 68, 88)">o</span> Email: mateo...@gmail.com</span>
+                                    <br>
+                                    <br>
+                                    <span><span style="color:rgb(45, 68, 88)">o</span> ID: U202110801</span>
+                                    <br>
+                                    <br>
+                                    <span><span style="color:rgb(45, 68, 88)">o</span> Carrera: Ingeniería de Sistemas</span>
+                                    <br>
                                 </div>
                             </div>
                         </li>
                         <li>
                             <div class="frthCntct_info">
                                 <div class="img_ctn">
-                                    <img src="#" alt="thrithDeveloper">
+                                    <img src="/imgpag/banner-medico-medico-gafas.jpg" alt="thrithDeveloper">
                                 </div>
                                 <div class="ext_Detail">
-                                    <p>.</p>
+                                    <p>Mi nombre es Pilar Velasquez, tengo 20 años. Soy una persona trabajadora, colaborativa y responsable con los trabajos que se me asignan. Me considero una buena líder debido a mi capacidad para inspirar y guiar a otros con empatía, visión estratégica y habilidades de comunicación efectiva.</p>
+                                </div>
+                                <div class="redes_Detail">
+                                    <span><span style="color:rgb(45, 68, 88)">o</span> Email: pilar...@gmail.com</span>
+                                    <br>
+                                    <br>
+                                    <span><span style="color:rgb(45, 68, 88)">o</span> ID: U202224506</span>
+                                    <br>
+                                    <br>
+                                    <span><span style="color:rgb(45, 68, 88)">o</span> Carrera: Ingeniería de Sistemas</span>
+                                    <br>
                                 </div>
                             </div>
                         </li>
                         <li>
                             <div class="ffthCntct_info">
                                 <div class="img_ctn">
-                                    <img src="#" alt="thrithDeveloper">
+                                    <img src="/imgpag/banner-medico-medico-gafas.jpg" alt="thrithDeveloper">
                                 </div>
                                 <div class="ext_Detail">
-                                    <p>.</p>
+                                    <p>Mi nombre es Gabriel Fernando Gordon Salas,  tengo 19 años. Soy una persona responsable con mis cosas, trato de colaborar lo máximo con mi grupo y me gusta llevarme bien con las personas. Tengo </p>
+                                </div>
+                                <div class="redes_Detail">
+                                    <span><span style="color:rgb(45, 68, 88)">o</span> Email: gabriel...@gmail.com</span>
+                                    <br>
+                                    <br>
+                                    <span><span style="color:rgb(45, 68, 88)">o</span> ID: U20221E229</span>
+                                    <br>
+                                    <br>
+                                    <span><span style="color:rgb(45, 68, 88)">o</span> Carrera: Ingeniería de Software</span>
+                                    <br>
                                 </div>
                             </div>
                         </li>
                         <li>
                             <div class="sxthCntct_info">
                                 <div class="img_ctn">
-                                    <img src="#" alt="thrithDeveloper">
+                                    <img src="/imgpag/banner-medico-medico-gafas.jpg" alt="thrithDeveloper">
                                 </div>
                                 <div class="ext_Detail">
-                                    <p>.</p>
+                                    <p>Mi nombre es Kenyi Ramírez, tengo 22 años. Soy una persona responsable y colaborativa con los proyectos que se me asignan. Me apasiona la programación. Tengo conocimientos en los lenguajes de programación Python y C++.</p>
+                                </div>
+                                <div class="redes_Detail">
+                                    <span><span style="color:rgb(45, 68, 88)">o</span> Email: kenyi...@gmail.com</span>
+                                    <br>
+                                    <br>
+                                    <span><span style="color:rgb(45, 68, 88)">o</span> ID: U202220138</span>
+                                    <br>
+                                    <br>
+                                    <span><span style="color:rgb(45, 68, 88)">o</span> Carrera: Ingeniería de Software</span>
+                                    <br>
                                 </div>
                             </div>
                         </li>
@@ -146,7 +199,7 @@
                     </ul>
                 </div>
                 <div class="ubi-ctn">
-                    <span class="spot">Jr. Independencia</span>
+                    <span class="spot">Av. de la Marina 2810</span>
                     <br>
                     <br>
                     <span class="spot">San Miguel</span>
