--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
     </head>
     <body>
         <header class="nav-container">
-
             <div class="log-cnt_rw">
                 <span class="alingTxt"><img class="img-logo" src = "imgLogo/i.png"></span>
                 <span class="alingTxt"><h3><span class="logo_ttl">SAI</span></h3></span>
             </div>
 
             <nav class="nav_bar">
+                <div class="btns menuToggle">
+                    <i class="fa-solid fa-bars"></i>
+                </div>
                 <ul class="first-list">
                     <li class="nav_txt Menu"><a href="#id">Inicio</a></li>
                     <span style="color: #0000ff;">|</span>
@@ -29,7 +31,7 @@
                     <span style="color: #0000ff;">|</span>
                     <li class="nav_txt Contacts"><a href="contact_Page/index.html">Contáctanos</a></li>
                     <span style="color: #0000ff;">|</span>
-                    <li class="nav_txt User"><a href="user_Login_Page/index.html"><i class="fa-regular fa-user"></i></a></li>
+                    <li class="nav_txt User"><a href="user_Login_Page/index.html"><i class="fa-solid fa-user"></i></a></li>
                 </ul>
             </nav>
 
@@ -56,7 +58,6 @@
 
         <section class="banner" id="id">.</section>
 
-
         <footer class="footer-ctn">
             <div class="footer-ctn_hdr">
                 <ul class="ftr_hdr_terms">
@@ -74,7 +75,7 @@
                     </ul>
                 </div>
                 <div class="ubi-ctn">
-                    <span class="spot">Jr. Independencia</span>
+                    <span class="spot">Av. de la Marina 2810</span>
                     <br>
                     <br>
                     <span class="spot">San Miguel</span>
