--- a/user_Login_Page/index.html
+++ b/user_Login_Page/index.html
@@ -20,6 +20,9 @@
             </div>
 
             <nav class="nav_bar">
+                <div class="btns menuToggle">
+                    <i class="fa-solid fa-bars"></i>
+                </div>
                 <ul class="first-list">
                     <li class="nav_txt Menu"><a href="../index.html">Inicio</a></li>
                     <span style="color: #0000ff;">|</span>
@@ -35,7 +38,7 @@
 
         </header>
 
-        <main class="log In">
+        <main class="logIn">
             <section class=" animate__animated animate__fadeInDownBig login-ctn">
                 <div class="img_frm-ctn">
                     <img src="../imgLogo/i.png" alt="Logo">
