--- a/user_Login_Page/index.html
+++ b/user_Login_Page/index.html
@@ -65,7 +65,7 @@
                         </button>
                     </div>
                     <div class="singUp-ctn">
-                        <p>¿No tienes cuenta?<a href="#">  Regístrese</a></p>
+                        <p><span>¿No tienes cuenta?</span><a href="#">  Regístrese</a></p>
                     </div>
                 </form>
 
