--- a/contact_Page/index.html
+++ b/contact_Page/index.html
@@ -56,9 +56,9 @@
                 <div class="cntct_employs">
                     <ul class="cntct_emp_lst">
                         <li>
-                            <div class="firstCntct_info">
+                            <div class="cntc_infoEdt firstCntct_info">
                                 <div class="img_ctn">
-                                    <img src="../imgpag/banner-medico-medico-gafas.jpg" alt="firstDeveloper">
+                                    <img src="../imgpag/userDefeat.png" alt="firstDeveloper">
                                 </div>
                                 <div class="ext_Detail">
                                     <p>Mi nombre es Carlos Enrique Zegarra Jurado,  tengo 18 años. Soy una persona muy responsable con la cual puedes contar siempre, tengo conocimiento en C++, Python y un poco de HTML, soy aficionado del fútbol y también me gusta practicarlo, en mis tiempos libres también me distraigo jugando videojuegos.</p>
@@ -76,9 +76,9 @@
                             </div>
                         </li>
                         <li>
-                            <div class="sndCntct_info">
+                            <div class="cntc_infoEdt sndCntct_info">
                                 <div class="img_ctn">
-                                    <img src="/imgpag/banner-medico-medico-gafas.jpg" alt="secondDeveloper">
+                                    <img src="/imgpag/userDefeat.png" alt="secondDeveloper">
                                 </div>
                                 <div class="ext_Detail">
                                     <p>Mi nombre es Miguel Rolando Salas Guillén, tengo 18 años y actualmente curso el 4to ciclo, soy una persona responsable con los trabajos que se me asignan y trato de ser lo más colaborativo posible con los grupos que conformó. Voy a apoyar a mi grupo para poder desarrollar adecuadamente los trabajos futuros y conseguir la nota esperada por todos.</p>
@@ -96,9 +96,9 @@
                             </div>
                         </li>
                         <li>
-                            <div class="thrtCntct_info">
+                            <div class="cntc_infoEdt thrtCntct_info">
                                 <div class="img_ctn">
-                                    <img src="/imgpag/banner-medico-medico-gafas.jpg" alt="thrithDeveloper">
+                                    <img src="/imgpag/userDefeat.png" alt="thrithDeveloper">
                                 </div>
                                 <div class="ext_Detail">
                                     <p>Mi nombre es Mateo Rentería, tengo 20 años. Soy una persona muy paciente, trato de colaborar y llevarme bien con mis compañeros. Me considero un buen apoyo en caso de que algún compañero necesite ayuda o alguna aclaración sobre nuestros trabajos.</p>
@@ -116,9 +116,9 @@
                             </div>
                         </li>
                         <li>
-                            <div class="frthCntct_info">
+                            <div class="cntc_infoEdt frthCntct_info">
                                 <div class="img_ctn">
-                                    <img src="/imgpag/banner-medico-medico-gafas.jpg" alt="thrithDeveloper">
+                                    <img src="/imgpag/userDefeat.png" alt="thrithDeveloper">
                                 </div>
                                 <div class="ext_Detail">
                                     <p>Mi nombre es Pilar Velasquez, tengo 20 años. Soy una persona trabajadora, colaborativa y responsable con los trabajos que se me asignan. Me considero una buena líder debido a mi capacidad para inspirar y guiar a otros con empatía, visión estratégica y habilidades de comunicación efectiva.</p>
@@ -136,9 +136,9 @@
                             </div>
                         </li>
                         <li>
-                            <div class="ffthCntct_info">
+                            <div class="cntc_infoEdt ffthCntct_info">
                                 <div class="img_ctn">
-                                    <img src="/imgpag/banner-medico-medico-gafas.jpg" alt="thrithDeveloper">
+                                    <img src="/imgpag/userDefeat.png" alt="thrithDeveloper">
                                 </div>
                                 <div class="ext_Detail">
                                     <p>Mi nombre es Gabriel Fernando Gordon Salas,  tengo 19 años. Soy una persona responsable con mis cosas, trato de colaborar lo máximo con mi grupo y me gusta llevarme bien con las personas. Tengo </p>
@@ -156,9 +156,9 @@
                             </div>
                         </li>
                         <li>
-                            <div class="sxthCntct_info">
+                            <div class="cntc_infoEdt sxthCntct_info">
                                 <div class="img_ctn">
-                                    <img src="/imgpag/banner-medico-medico-gafas.jpg" alt="thrithDeveloper">
+                                    <img src="/imgpag/userDefeat.png" alt="thrithDeveloper">
                                 </div>
                                 <div class="ext_Detail">
                                     <p>Mi nombre es Kenyi Ramírez, tengo 22 años. Soy una persona responsable y colaborativa con los proyectos que se me asignan. Me apasiona la programación. Tengo conocimientos en los lenguajes de programación Python y C++.</p>
@@ -221,7 +221,7 @@
         </footer>
 
 
-        <script type="text/javascript" src="main.js"></script>
+        <script type="text/javascript" src="/gnrJvsCode/main.js"></script>
 
     </body>
 </html>
