--- a/index.html
+++ b/index.html
@@ -53,9 +53,32 @@
                 </div>
                 <svg class="wave1" style="position: absolute;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="rgb(79, 128, 201)" fill-opacity="1" d="M0,320L60,272C120,224,240,128,360,85.3C480,43,600,53,720,53.3C840,53,960,43,1080,32C1200,21,1320,11,1380,5.3L1440,0L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path></svg>
             </div>
+
         </section>
 
-        <section class="banner" id="id">.</section>
+        <div class="lineBlr"></div>
+
+        <section class="banner" id="id">
+            <div class="appInfo_Sai">
+                <h3 class="ttlFrstQst"><b>¿Quienes somos?</b></h3>
+                <p class="Frstxt"><br>Somos una plataforma orientada<br>a prevenir la propagación de<br>enfermedades infecciosas a nivel mundial</b></p>
+            </div>
+            <div class="imgMedic_ctn"><img src="imgpag/pixelcut-export-removebg-preview.png" alt="medic"></div>
+            <div class="mrInfApp">
+                <div class="txt_mng">
+                    <div class="txt_cnt">
+                        <h3>Misión</h3>
+                        <p>Propocionar una plataforma eficiente<br> para detectar y contener enfermedades<br> infecciosas, priorizando la salud<br> junto a la seguridad pública.</p>
+                    </div>
+                </div>
+                <div class="txt_mng">
+                    <div class="txt_cnt">
+                        <h3>Visión</h3>
+                        <p>Ser líderes en la prevención y detección<br> temprana de enfermedades infecciosas infecciosas a<br> nivel global para mejorar el<br>bienestar global</p> 
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <footer class="footer-ctn">
             <div class="footer-ctn_hdr">
@@ -96,7 +119,7 @@
         </footer>
 
 
-        <script type="text/javascript" src="main.js"></script>
+        <script type="text/javascript" src="gnrJvsCode/main.js"></script>
 
     </body>
 </html>
