--- a/contact_Page/index.html
+++ b/contact_Page/index.html
@@ -78,7 +78,7 @@
                         <li>
                             <div class="cntc_infoEdt sndCntct_info">
                                 <div class="img_ctn">
-                                    <img src="/imgpag/userDefeat.png" alt="secondDeveloper">
+                                    <img src="../imgpag/userDefeat.png" alt="secondDeveloper">
                                 </div>
                                 <div class="ext_Detail">
                                     <p>Mi nombre es Miguel Rolando Salas Guillén, tengo 18 años y actualmente curso el 4to ciclo, soy una persona responsable con los trabajos que se me asignan y trato de ser lo más colaborativo posible con los grupos que conformó. Voy a apoyar a mi grupo para poder desarrollar adecuadamente los trabajos futuros y conseguir la nota esperada por todos.</p>
@@ -98,7 +98,7 @@
                         <li>
                             <div class="cntc_infoEdt thrtCntct_info">
                                 <div class="img_ctn">
-                                    <img src="/imgpag/userDefeat.png" alt="thrithDeveloper">
+                                    <img src="../imgpag/userDefeat.png" alt="thrithDeveloper">
                                 </div>
                                 <div class="ext_Detail">
                                     <p>Mi nombre es Mateo Rentería, tengo 20 años. Soy una persona muy paciente, trato de colaborar y llevarme bien con mis compañeros. Me considero un buen apoyo en caso de que algún compañero necesite ayuda o alguna aclaración sobre nuestros trabajos.</p>
@@ -118,7 +118,7 @@
                         <li>
                             <div class="cntc_infoEdt frthCntct_info">
                                 <div class="img_ctn">
-                                    <img src="/imgpag/userDefeat.png" alt="thrithDeveloper">
+                                    <img src="../imgpag/userDefeat.png" alt="thrithDeveloper">
                                 </div>
                                 <div class="ext_Detail">
                                     <p>Mi nombre es Pilar Velasquez, tengo 20 años. Soy una persona trabajadora, colaborativa y responsable con los trabajos que se me asignan. Me considero una buena líder debido a mi capacidad para inspirar y guiar a otros con empatía, visión estratégica y habilidades de comunicación efectiva.</p>
@@ -138,7 +138,7 @@
                         <li>
                             <div class="cntc_infoEdt ffthCntct_info">
                                 <div class="img_ctn">
-                                    <img src="/imgpag/userDefeat.png" alt="thrithDeveloper">
+                                    <img src="../imgpag/userDefeat.png" alt="thrithDeveloper">
                                 </div>
                                 <div class="ext_Detail">
                                     <p>Mi nombre es Gabriel Fernando Gordon Salas,  tengo 19 años. Soy una persona responsable con mis cosas, trato de colaborar lo máximo con mi grupo y me gusta llevarme bien con las personas. Tengo </p>
@@ -158,7 +158,7 @@
                         <li>
                             <div class="cntc_infoEdt sxthCntct_info">
                                 <div class="img_ctn">
-                                    <img src="/imgpag/userDefeat.png" alt="thrithDeveloper">
+                                    <img src="../imgpag/userDefeat.png" alt="thrithDeveloper">
                                 </div>
                                 <div class="ext_Detail">
                                     <p>Mi nombre es Kenyi Ramírez, tengo 22 años. Soy una persona responsable y colaborativa con los proyectos que se me asignan. Me apasiona la programación. Tengo conocimientos en los lenguajes de programación Python y C++.</p>
