--- a/user_Login_Page/index.html
+++ b/user_Login_Page/index.html
@@ -81,7 +81,7 @@
             <span><a href="#">Términos de uso</a><span> | </span><a href="#"> Política de privacidad</a></span>
         </footer>
 
-        <script type="text/javascript" src="/gnrJvsCode/main.js"></script>
+        <script type="text/javascript" src="../gnrJvsCode/main.js"></script>
         <script src="https://unpkg.com/scrollreveal"></script>
 
     </body>
