--- a/contact_Page/index.html
+++ b/contact_Page/index.html
@@ -221,7 +221,7 @@
         </footer>
 
 
-        <script type="text/javascript" src="/gnrJvsCode/main.js"></script>
+        <script type="text/javascript" src="../gnrJvsCode/main.js"></script>
 
     </body>
 </html>
