--- a/contact_Page/index.html
+++ b/contact_Page/index.html
@@ -222,6 +222,23 @@
 
 
         <script type="text/javascript" src="../gnrJvsCode/main.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+        <script src="https://unpkg.com/scrollreveal"></script>
+
+
+        <script type="text/javascript">
+            
+            
+            ScrollReveal().reveal()
+            window.sr = ScrollReveal();
+            sr.reveal('.cntc_infoEdt',{
+                duration: 3000,
+                origin: 'bottom',
+                distance: '100px'
+            });
+
+
+        </script>
 
     </body>
 </html>
