--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <ul class="first-list">
                     <li class="nav_txt Menu"><a href="#id">Inicio</a></li>
                     <span style="color: #0000ff;">|</span>
-                    <li class="nav_txt Medicine"><a href="#">Medicina</a></li>
+                    <li class="nav_txt Medicine"><a href="SAIgpt/index.html">Medicina</a></li>
                     <span style="color: #0000ff;">|</span>
                     <li class="nav_txt News"><a href="#">Noticias</a></li>
                     <span style="color: #0000ff;">|</span>
