--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     </ul>
                 </div>
                 <br>
-                <span class="end_ftr">SAI © 2024</span>
+                <span class="end_ftr">SAI &copy; 2024</span>
             </div>
         </footer>
 
