--- a/index.html
+++ b/index.html
@@ -130,12 +130,12 @@
             window.sr = ScrollReveal();
             sr.reveal('.imgMedic_ctn',{
                 duration: 3000,
-                origin: 'rigth',
+                origin: 'left',
                 distance: '100px'
             });
             sr.reveal('.txtProf',{
                 duration: 3000,
-                origin: 'left',
+                origin: 'botom',
                 distance: '100px'
             });
             sr.reveal('.txt_mng',{
