--- a/SAIgpt/profile_page/index.html
+++ b/SAIgpt/profile_page/index.html
@@ -282,6 +282,7 @@
         </main>
 
 
+        <script type="text/javascript" src="../../gnrJvsCode/main.js"></script>
         <script type="text/javascript" src="../../gnrJvsCode/profile.js"></script>
         <script src="https://unpkg.com/scrollreveal"></script>
         <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
